--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@ Articles des MMIA1
     <!-- PARTIE DE Francesco -->
 	<div id="news">
 		<h2>
-			News INSERER_NOM !!
+            Francesco: 600 buts en club
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			Cristiano Ronaldo gonfle un peu plus ses statistiques et sa place dans les annales du football. Buteur contre l'Inter Milan samedi, l'attaquant de la Juventus a signé le 600e but en club de sa carrière.<br/>
+Cristiano Ronaldo est définitivement de la caste des plus grands. Déjà possesseur d'une armoire à trophées - individuels comme collectifs – plus que bien garnie, la star portugaise n'est pas rassasiée. Alors que la Juventus Turin n'a plus rien à jouer, le titre de Serie A assuré et la Ligue des champions envolée, CR7 peut se permettre de gonfler ses chiffres individuels. Alors que la Vieille Dame était menée 1-0 sur la pelouse de l'Inter Milan ce samedi, il s'est une nouvelle fois montré décisif pour assurer le point du match nul. Le 600e but en club de sa carrière XXL.<br/>Auteur de son 20e but de la saison en championnat d'Italie, Cristiano Ronaldo a complété sa collection de pions déjà impressionnante. 5 buts au Sporting pour se révéler, 118 à Manchester United pour s'imposer, puis 450 pour asseoir sa domination sur le football européen avec le Real Madrid, Ronaldo a marqué à foison partout où il est passé. Et ce dans toutes les compétitions possibles. 600 buts en 801 matches, les chiffres sont tout simplement parmi les plus grands de l'histoire de ce sport. Et rien ne semble présager que la fin soit proche pour CR7.
 		</p>
 		<h3>Source : <a href="#">blabla</a>
 		</h3>
